# occt

./: .gitignore  README.md  README_zh.md  occt.patch
.github/workflows/: build-occt.yml
scripts/: build.bat  build.sh  build_all.bat  build_all.sh  build_base.bat  build_base.sh  build_occt.bat  build_occt.sh  build_view3d.bat  build_view3d.sh  local_build.bat  view3d.bat
src/: CMakeLists.txt
